Bug 1661570 - Allow webfonts to be used for emoji-default codepoints even if they don't provide color glyphs. r=m_kato

Differential Revision: https://phabricator.services.mozilla.com/D88578