gfx/thebes/gfxPlatform.h
@@ -98,7 +98,24 @@ enum eGfxLog {
 
 // Used during font matching to express a preference, if any, for whether
 // to use a font that will present a color or monochrome glyph.
-enum class eFontPresentation : uint8_t { Any = 0, Text = 1, Emoji = 2 };
+enum class eFontPresentation : uint8_t {
+  // Character does not have the emoji property, so no special heuristics
+  // apply during font selection.
+  Any = 0,
+  // Character is potentially emoji, but Text-style presentation has been
+  // explicitly requested using VS15.
+  Text = 1,
+  // Character has Emoji-style presentation by default (but an author-
+  // provided webfont will be used even if it is not color).
+  EmojiDefault = 2,
+  // Character explicitly requires Emoji-style presentation due to VS16 or
+  // skin-tone codepoint.
+  EmojiExplicit = 3
+};
+
+inline bool PrefersColor(eFontPresentation aPresentation) {
+  return aPresentation >= eFontPresentation::EmojiDefault;
+}
 
 // when searching through pref langs, max number of pref langs
 const uint32_t kMaxLenPrefLangList = 32;
