gfx/thebes/gfxPlatformGtk.cpp
@@ -209,7 +209,7 @@ static const char kFontSymbola[] = "Symbola";
 void gfxPlatformGtk::GetCommonFallbackFonts(uint32_t aCh, Script aRunScript,
                                             eFontPresentation aPresentation,
                                             nsTArray<const char*>& aFontList) {
-  if (aPresentation == eFontPresentation::Emoji) {
+  if (PrefersColor(aPresentation)) {
     aFontList.AppendElement(kFontTwemojiMozilla);
   }
 
