gfx/thebes/gfxPlatformMac.cpp
@@ -174,7 +174,7 @@ static const char kFontZapfDingbats[] = "Zapf Dingbats";
 void gfxPlatformMac::GetCommonFallbackFonts(uint32_t aCh, Script aRunScript,
                                             eFontPresentation aPresentation,
                                             nsTArray<const char*>& aFontList) {
-  if (aPresentation == eFontPresentation::Emoji) {
+  if (PrefersColor(aPresentation)) {
     aFontList.AppendElement(kFontAppleColorEmoji);
   }
 
